# ReworkX

./: .gitignore  LICENSE  pyproject.toml
examples/: combine.etl.yaml  combined.graph.yaml  example.graph.yaml  example.yaml  example_projected.yaml  multi_transform.etl.yaml  multi_transformed.graph.yaml  project.etl.yaml  projected.graph.yaml  transfer.etl.yaml
examples/combine/: etl.yaml  query.rework  result.yaml
examples/multi_transform/: etl.yaml  query.rework  result.yaml
examples/project/: etl.yaml  query.rework
examples/transfer/: etl.yaml  query.rework  result.yaml
notebooks/: projx_demo.ipynb  projx_neo4j_demo.ipynb
projx/: __init__.py  etl.py  grammar.pg  grammar.pgt  grammar.py  nxprojx.py  utils.py  yaml.py
projx/modules/: loaders.py
tests/: test_projx.py  test_reworkx.py
