[tool.poetry]
name = "ReworkX"
version = "0.1.0"
description = ""
authors = ["M. Niederlechner <mniederlechner@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.6"
pyparsing = "^2.3"
networkx = "^2.2"
more-itertools = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
