[tool.poetry]
name = "ReworkX"
version = "0.1.0"
description = ""
authors = ["M. Niederlechner <mniederlechner@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.6"
networkx = "^2.2"
more-itertools = "^4.3"
parglare = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pyyaml = "^3.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
